// conformancelib/build.gradle

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
    }
}

plugins {
    id 'java-library'
    id 'org.ajoberstar.grgit' version '2.1.0'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id "de.jjohannes.extra-java-module-info" version "0.1"
}

java {
    modularity.inferModulePath.set(true)
}

apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'org.junit.platform.gradle.plugin'

targetCompatibility = JavaVersion.VERSION_11
sourceCompatibility = JavaVersion.VERSION_11

logger.warn("target java version: " + targetCompatibility)
logger.warn("source java version: " + sourceCompatibility)

//import org.gradle.plugins.ide.eclipse.model.AccessRule

eclipse {
    classpath {
        file {
            whenMerged {
                //def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
                //jre.accessRules.add(new AccessRule('0', 'javax/smartcardio/**'))
                //def lib = entries.find { it.path.contains '.' }
                //println '--> ' + lib
                //lib.sourcePath = fileReference(file('build/libs/gov.gsa.pivconformance.conformancelib-sources' + '-' + getVersion() + '.jar'))
            }
        }
    }
}

repositories {
    flatDir {
        dirs '../cardlib/build/libs/'
    }
    jcenter()
    mavenCentral()
    maven { url 'https://repository.apache.org/snapshots' }
}

def getVersion = { ->
    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/')
    File versionFile = new File(resourcesDir, 'build.version')
    if(!versionFile.exists()) {
        resourcesDir.mkdirs()
        versionFile.createNewFile()
        println 'Initializing build.version file'
        versionFile.text = '0.0-changeme'
    }
    String version = versionFile.text.replaceAll("[\\n\\r\\t ]", "")
}

// custom task from
// https://stackoverflow.com/questions/39444908/how-to-create-an-html-report-for-junit-5-tests
// to get readable output for passing tests
configurations {
    junitXmlToHtml
}
dependencies {

    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    implementation 'ch.qos.logback:logback-core:1.3.0-alpha5'
    implementation 'commons-cli:commons-cli:1.4'           // plain library
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'com.payneteasy:ber-tlv:1.0-8'
    implementation 'info.picocli:picocli:3.6.0'
    implementation 'org.apache.commons:commons-csv:1.8'
    implementation 'org.apache.ibatis:ibatis-core:3.0'
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    implementation 'org.junit.platform:junit-platform-launcher:1.7.0'
    implementation 'org.junit.platform:junit-platform-commons:1.7.0'
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
    implementation 'org.xerial:sqlite-jdbc:3.32.3.2'
    api 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'// + getVersion()

/*
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.7.0'
    testImplementation 'org.junit.platform:junit-platform-commons:1.7.0'
    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    runtime 'ch.qos.logback:logback-core:1.3.0-alpha5'
    runtime 'commons-cli:commons-cli:1.4'
    runtime 'commons-codec:commons-codec:1.15'
    runtime 'com.payneteasy:ber-tlv:1.0-8'
    runtime 'info.picocli:picocli:3.6.0'
    runtime 'org.apache.commons:commons-csv:1.8'
    runtime 'org.apache.ibatis:ibatis-core:3.0'
    runtime 'org.bouncycastle:bcpkix-jdk15on:1.66'
    runtime 'org.bouncycastle:bcprov-jdk15on:1.66'
    runtime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    runtime 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    runtime 'org.junit.platform:junit-platform-launcher:1.7.0'
    runtime 'org.junit.platform:junit-platform-commons:1.7.0'
    runtime 'org.slf4j:slf4j-api:2.0.0-alpha1'
    runtime 'org.xerial:sqlite-jdbc:3.32.3.2'
    runtime 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'// + getVersion()
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testRuntime 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    testRuntime 'org.junit.platform:junit-platform-launcher:1.7.0'
    testRuntime 'org.junit.platform:junit-platform-commons:1.7.0'
*/
    shadow 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    shadow 'ch.qos.logback:logback-core:1.3.0-alpha5'
    shadow 'com.payneteasy:ber-tlv:1.0-8'
    shadow 'info.picocli:picocli:3.6.0'
    shadow 'org.apache.ibatis:ibatis-core:3.0'
    shadow 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    shadow 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    shadow 'org.junit.platform:junit-platform-launcher:1.7.0'
    shadow 'org.junit.platform:junit-platform-commons:1.7.0'
    shadow 'org.slf4j:slf4j-api:2.0.0-alpha1'
    shadow 'org.xerial:sqlite-jdbc:3.32.3.2'
    shadow 'gov.gsa.pivconformance.cardlib:gov.gsa.pivconformance.cardlib:0.2.1-beta'// + getVersion()
 
    junitXmlToHtml 'org.apache.ant:ant-junit:1.10.8'
}

jar {
    doFirst {
        version = getVersion()
        project.version = version
    }
    manifest {
        attributes(
			'Manifest-Version'      : '0.2.1-beta',
			'Created-By'            : 'General Services Administration',
			'Automatic-Module-Name' : 'gov.gsa.pivconformance.conformancelib',
			'Multi-Release'         : 'true',
			'Class-Path'            : 'gov.gsa.pivconformance.conformancelib-0.2.1-beta.jar',
			'Implementation-Title'  : 'gov.gsa.pivconformance.conformancelib',
			'Implementation-Version': '0.2.1-beta',
			'Implementation-Vendor' : 'General Services Administration',
			'Bundle-ManifestVersion' :'2',
			'Bundle-SymbolicName': 'gov.gsa.pivconformance.conformancelib',
			'Bundle-Name': 'gov.gsa.pivconformance.conformancelib',
			'Bundle-Vendor': 'gov.gsa',
			'Bundle-RequiredExecutionEnvironment': 'JavaSE-11',
			//'Export-Package': 'gov.gsa.pivconformance.cardlib;version=0.2.1-beta,gov.gsa.pivconformance.cardlib.card.client;version=0.2.1-beta,gov.gsa.pivconformance.cardlib.card.tools;version=0.2.1-beta,gov.gsa.pivconformance.cardlib.utils;version=0.2.1-beta,gov.gsa.pivconformance.cardlib.tlv;version=0.2.1-beta',
			//'Import-Package':  'java.smartcardio, java.sql, commons.cli, commons.codec, commons.csv, org.bouncycastle.pkix,org.bouncycastle.provider, org.slf4j',
			'Specification-Title'   : 'gov.gsa.pivconformance.conformancelib',
			'Specification-Version' : '0.2.1-beta',
			'Specification-Vendor'  : 'General Services Administration',
			'Sealed'                : 'false'
        )
    }
    doLast {
        println 'archiveName: ' + archiveName
        configurations.runtime.each { println it }
    }
}

extraJavaModuleInfo {
    module("gov.gsa.pivconformance.cardlib-0.2.1-beta.jar", "gov.gsa.pivconformance.cardlib", "0.2.1-beta") {
        exports("gov.gsa.pivconformance.cardlib");
    }

    module("bcprov-jdk15on-1.66.jar", "org.bouncycastle.provider.ext", "1.66") {
        exports("org.bouncycastle.provider")
    }
    module("bcpkix-jdk15on-1.66.jar", "org.bouncycastle.pkix", "1.66") {
        exports("org.bouncycastle.pkix")
    }
    module("ber-tlv-1.0-8.jar", "com.payneteasy", "1.08") {
        exports("ber.tlv")
    }
    module("hamcrest-core-1.3.jar", "org.hamcrest", "1.3") {
        exports("hamcrest.core")
    }
    module("slf4j-api-2.0.0-alpha1.jar", "org.slf4j", "1.4") {
        exports("slf4j.api")
    }
    module("sqlite-jdbc-3.32.3.2.jar", "org.xerial.sqlite", "3.32.3.2") {
        exports("org.xerial.sqlite")
        exports("org.sqlite")
    }
    module("commons-cli-1.4.jar", "commons.cli", "1.4") {
        exports("org.apache.commons.cli")
        exports("commons.cli");
    }
    module("commons-codec-1.15.jar", "commons.codec", "1.15") {
        exports("org.apache.commons.codec.binary")
        exports("org.apache.commons.codec")
        exports("commons.codec");
    }
    module("commons-csv-1.8.jar", "org.apache.commons.csv", "1.8") {
        exports("org.apache.commons.csv")
    }
    module("junit-platform-engine-5.7.0.jar","junit.platform.engine", "5.7.0") {
        exports("junit.jupiter.engine")
    }
    module("junit-platform-launcher-1.7.0.jar","junit.platform.launcher", "1.7.0") {
        exports("junit.platform.launcher")
        exports("org.junit.platform.launcher")
    }
    module("junit-platform-commons-1.7.0.jar","junit-platform-commons", "1.7.0") {
        exports("org.junit.platform.commons")
        exports("org.junit.platform.commons.util to org.junit.jupiter.api org.junit.jupiter.engine org.junit.jupiter.params org.junit.platform.launcher org.junit.vintage.engine org.jun it.platform.reporting org.junit.jupiter.migrationsupport org.junit.platform.suite.api org.junit.platform.runner org.junit.platform.console org.junit.platform.engine org.junit.platform.t estkit");
    }
    module("activation-1.1.jar","javax.activation", "1.1") {
        exports("activation")
    }
    module("checker-framework-1.7.0.jar","edu.washington.cs.types.checker", "1.7.0") {
        exports("checker.framework")
    }
    module("logback-classic-1.3.0-alpha5.jar","ch.qos.logback", "1.3.0-alpha5") {
        exports("logback.classic")
    }
    module("logback-core-1.3.0-alpha5.jar","ch.qos.logback", "1.3.0-alpha5") {
        exports("logback.core")
    }
    automaticModule("ibatis-core-3.0.jar", "org.apache.ibatis")
    automaticModule("junit-4.11.jar","org.junit") 
   
}

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib'
        inputs.property("moduleName", moduleName)
        println 'compileJava.moduleName and version: ' + moduleName + '-' + getVersion()
    }

    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'org.junit.jupiter.api',
                '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib'
        ]
        classpath = files()
    }
}

compileTestJava {
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib.test'
        version = getVersion()
        inputs.property("moduleName", moduleName)
    }
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'org.junit.jupiter.api',
                '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib',
                '--add-reads', "$moduleName=org.junit.jupiter.api",
                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath
        ]
        classpath = files()
    }
}

test {
    version = getVersion()
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

//junitPlatform { }

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
}

task sourceJar(type: Jar, dependsOn: classes) {
    classifier 'sources'
    from sourceSets.main.allSource
}

task copyShadowLibs(type: Copy) {
    from configurations.shadow
    into 'build/libs'
}

shadowJar.dependsOn copyShadowLibs

shadowJar.doFirst {
    version = getVersion()
    println 'shadowJar.doFirst.archveName: ' + archiveName
}

task installSource(type: Copy) {
    dependsOn copyShadowLibs
    dependsOn sourceJar
    from sourceJar
    into 'build/libs' 
}

task install(type: Copy) {
    version = getVersion()
    dependsOn jar
    dependsOn shadowJar
    from jar
    into 'build/libs' 
}
